# vfs-tar

./: Cargo.toml  README.md
examples/: ls.rs
src/: lib.rs  parser.rs
tests/: basic.rs  long.rs
