[package]
name = "vfs-tar"
version = "0.1.0"
edition = "2021"
authors = ["Berrysoft <Strawberry_Str@hotmail.com"]
categories = ["filesystem"]
description = "VFS for TAR files."
keywords = ["filesystem", "vfs", "tar"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Berrysoft/vfs-tar"

[dependencies]
memmap2 = "0.5"
vfs = "0.9"
nom = "7"

[dev-dependencies]
tar-rs = { version = "0.4", package = "tar" }
tempfile = "3.3"
