[package]
name = "vfs-tar"
version = "0.3.1"
edition = "2021"
authors = ["Berrysoft <Strawberry_Str@hotmail.com"]
categories = ["filesystem"]
description = "VFS for TAR files."
keywords = ["filesystem", "vfs", "tar"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Berrysoft/vfs-tar"

[dependencies]
tar-parser2 = "0.8"
memmap2 = "0.5"
vfs = "0.9"

[dev-dependencies]
tar = "0.4"
tempfile = "3.4"
