[package]
name = "vfs-tar"
version = "0.5.0"
edition = "2021"
authors = ["Berrysoft <Strawberry_Str@hotmail.com"]
categories = ["filesystem"]
description = "VFS for TAR files."
keywords = ["filesystem", "vfs", "tar"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Berrysoft/vfs-tar"

[dependencies]
tar-parser2 = "0.9"
stable_deref_trait = "1.2"
vfs = "0.12"
memmap2 = { version = "0.9", optional = true, features = [
    "stable_deref_trait",
] }

[dev-dependencies]
tar = "0.4"
tempfile = "3.4"

[features]
default = []
mmap = ["dep:memmap2"]

[[example]]
name = "ls"
required-features = ["mmap"]
